# flex

./: .gitignore  CHANGELOG  CODE-DE-CONDUITE.md  CODE_OF_RESPECT.md  COMPILING.md  Cargo.toml  LICENSE  Makefile.toml  README  README.md  build.rs  code-of-conduct.md  contribution.md  flex-rs.sh  install.sh  windows-installer-script.iss
.github/workflows/: nightly.yml
assets/examples/: infinity.ascii  tux.ascii  xgui4.ascii
assets/images/: README.md  infinity.ascii  tux.ascii  xgui4.ascii
docs/: code-of-respect.rtf  color-code.txt  colors-code.txt  information.rtf  license.rtf
locales/: en.json  fr.json
scripts/: iscc.sh
src/: cmd_line.rs  data.rs  features.rs  main.rs  managers.rs  program.rs
src/data/: app_data.rs  colors.rs
src/managers/: color_managers.rs
web/: index.html
