[package]
name = "flex-rs"
version = "0.0.20"
edition = "2024"
authors = [ "Xgui4" ]
build = "build.rs"
license = "GPL3"
repository = "https://github.com/xgui4/flex"
exclude = ["target/", "assets/images/", "docs/", "packages/"]

[build-dependencies]
windows_exe_info = "0.5.2"

[dev-dependencies]
cargo-make = "0.37.24"

[dependencies]
windows_exe_info = {version = "0.5.2", features = ["manifest"]}
rust-i18n = "3"

[target.x86_32-pc-windows-gnu]
linker = "x86_32-w32-mingw32-gcc"
ar = "x86_32-w32-mingw32-ar"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w32-mingw32-gcc"
ar = "x86_64-w32-mingw32-ar"

